feat: todo delete API
